# pinkteam

./: 12_5version  CMakeLists.txt  README.md  camera_testing.py  clarity_quantification.py  enhanced_video_details.csv  enhancement_helpers.cpp  enhancement_helpers.h  enhancement_helpers.hpp  enhancement_helpers.py  faster_image.py  imageprocessing.py  main.cpp  pyvenv.cfg  simple_streaming.py  streaming_frames.py  streaming_main.py  streaming_queues.cpp  streaming_queues.py  streaming_test.py  turbidity.m  turbidity_git.py  turbidity_gpt.py  two_images.py  video_enhancer  video_enhancer.cpp  video_enhancer.py  videoprocessing.py
Scripts/: activate  activate.bat
old code/: faster_image.py  imageprocessing.py  lut_tester.cpp  side_by_side.py  simple_streaming.py  streaming_main.py  streaming_queues.cpp  streaming_test.py  turbidity_git.py  two_images.py  video_enhancer  video_enhancer.cpp
